<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tooltip_last_sync_date">Data ostatniej synchronizacji</string>
    <string name="tooltip_expansion_count">liczba posiadanych dodatków</string>
    <string name="tooltip_game_count">Liczba posiadanych gier</string>
    <string name="placeholder_loading">Ładowanie…</string>
    <string name="tooltip_username">Nazwa użytkownika</string>
    <string name="title_login">Logowanie użytkownika</string>
    <string name="label_login">Zaloguj się</string>
    <string name="title_synchronize">Synchronizacja…</string>
    <string name="tooltip_basegame_count">Liczba posiadanych podstawek</string>
    <string name="title_game_list">Lista gier</string>
    <string name="title_expansion_list">Lista dodatków</string>
    <string name="title_game_rank_list">Historia rank gry</string>
    <string name="li_game_thumbnail">game thumbnail</string>
    <string name="placeholder_year">2022</string>
    <string name="placeholder_order_no">1</string>
    <string name="placeholder_title">Gra: Tytuł dwa, wersja długa</string>
    <string name="placeholder_ranking">ranking - 12</string>
    <string name="placeholder_date">2015-12-12</string>
    <string name="placeholder_score">7.13</string>
    <string name="actions_sort_alphabetically">Sortuj alfabetycznie</string>
    <string name="actions_sort_by_ranking">Sortuj według rankingu</string>
    <string name="actions_sort_by_year">Sortuj według roku wydania</string>
    <string name="action_expansions">Lista dodatków użytkownika</string>
</resources>
