<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip">

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dip"
        android:contentDescription="@string/li_game_thumbnail"
        android:src="@drawable/ic_image_placeholder" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_rank"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/iv_thumbnail"
        android:gravity="center_vertical"
        android:text="@string/placeholder_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_rank"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/tv_title"
        android:gravity="center"
        android:text="@string/placeholder_year"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="200dp"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/iv_thumbnail"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/placeholder_ranking"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="50dp"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/tv_rank"
        android:ellipsize="marquee"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/placeholder_score"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_orderNo"
        android:layout_width="match_parent"
        android:layout_height="26dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/tv_score"
        android:ellipsize="marquee"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/placeholder_order_no"
        android:textSize="16sp" />

</RelativeLayout>